--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MD Editor</title>
-  <link rel="" href="" />
+  <title>.md-editor</title>
 </head>
 <body>
   <div id="root"></div>
